Squashes some bugs pertaining to posing tweets and displaying time since posts.

--- a/public/styles/article.css
+++ b/public/styles/article.css
@@ -39,7 +39,7 @@ article p {
   border-bottom: 3px solid darkgrey;
   margin-bottom: 1px;
   margin-top: 7px;
-  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 article span {
