--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -14,13 +14,19 @@ div.Error > span {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  border: #a83a36 solid 3px;
+  padding: 5px;
 }
 
 div.Error > span > button {
   background-color: transparent;
   color:  #a83a36;
+  height: 25px;
   border: transparent;
-  height: 20px;
+}
+
+div.Error > span > button:hover {
+  color: #404040;
 }
 
 div.Error > span > h5 {
@@ -44,7 +50,7 @@ form textarea {
   width: 100%;
   height: 2em;
   border-color: transparent;
-  border-bottom-color: navy;
+  border-bottom-color: #4056A1;
   border-bottom-width: 5px;
   color: #404040;
 }
@@ -58,7 +64,7 @@ form input {
 
 form span {
   font-family: 'Bungee', sans-serif;
-  margin-left: 80%; 
+  margin-left: 85%; 
 }
 
 .neg {
